# ScaPyra

./: README.md  main.py  pyproject.toml
src/ScaPyra/: __init__.py  cli.py  geometry.py  scara.py
src/ScaPyra/driver/: __init__.py
src/scapyra/: __init__.py  geometry.py
src/scapyra/driver/: pca9685.py
tests/: test_geometry.py
