[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scapyra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=2.3.4",
    "pytest>=8.4.2",
    "typer>=0.20.0",
]

authors = [
    { name = "Hubert", email = "h.malinowski2000@gmail.com" }
]

[project.urls]
Homepage = "https://github.com/HubertMalinowski/ScaPyra"
Repository = "https://github.com/HubertMalinowski/ScaPyra"